--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
   "dependencies": {
     "@react-spring/web": "^9.6.1",
     "@types/lodash": "^4.14.191",
-    "@vitejs/plugin-react": "^1.3.2",
     "lodash": "^4.17.21",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
@@ -37,6 +36,7 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@types/react-router-dom": "^5.3.3",
+    "@vitejs/plugin-react": "^5.1.1",
     "autoprefixer": "^10.4.13",
     "cross-env": "^7.0.3",
     "postcss": "^8.4.21",
@@ -45,7 +45,8 @@
     "postcss-preset-env": "^6.7.0",
     "sass": "^1.58.3",
     "tailwindcss": "^3.4.10",
-    "vite": "^2.9.18",
-    "vite-tsconfig-paths": "^4.0.5"
+    "vite": "^5.4.21",
+    "vite-tsconfig-paths": "^5.1.4",
+    "zmp-vite-plugin": "^1.1.6"
   }
 }
