--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,7 @@
         "type": "object",
         "properties": {
           "template": {
-            "description": "Cấu hình riêng của template ZaUI Coffee",
+            "description": "Cấu hình riêng của template Heo Chi Tiêu",
             "type": "object",
             "properties": {
               "name": {
