Refactor Reports and Settings pages for improved UI and functionality
- Updated Reports page to enhance layout and navigation, including new monthly stats and budget cards.
- Replaced category breakdown with a more visually appealing representation.
- Introduced a new tab system for better user experience in the Reports page.
- Simplified Settings page layout, added user avatar and improved menu items.
- Enhanced data management options and added quick access features in Settings.
- Improved responsiveness and visual consistency across both pages.

--- a/app-config.json
+++ b/app-config.json
@@ -2,7 +2,7 @@
   "app": {
     "title": "",
     "textColor": "white",
-    "headerColor": "#FFFFFF",
+    "headerColor": "#fbbf24",
     "statusBar": "normal",
     "actionBarHidden": true,
     "hideActionBar": true,
